force-app/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <description>Location of the event</description>
    <label>Location (Address Book)</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>