force-app/main/default/objects/Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>city for location</description>
    <inlineHelpText>enter city</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>