force-app/main/default/objects/Location__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>landmark for location</description>
    <inlineHelpText>enter landmark for location</inlineHelpText>
    <label>Landmark</label>
    <length>150</length>
    <type>Text</type>
</CustomField>