force-app/main/default/objects/Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>state for location</description>
    <inlineHelpText>enter state for location</inlineHelpText>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>