force-app/main/default/objects/Location__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>verified location or not?</description>
    <inlineHelpText>is the location verified?</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>